@@ -1,5 +1,11 @@
 2007-11-12  Lillian Angel  <langel@redhat.com>
 
+	* Makefile.am: Fixed tools.jar and rt.jar to include all directories
+	built under lib/.
+	* Makefile.in: Regenerated.
+
+2007-11-12  Lillian Angel  <langel@redhat.com>
+
 	* .hgignore: Updated
 	* Makefile.am
 	(ICEDTEA_ENV): Removed GENSRCDIR.
